<?xml version="1.0" encoding="utf-8"?>
<!-- @author Radhe Patel -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_create_event_main"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Title -->
        <TextView
            android:id="@+id/create_event_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Create New Event"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <!-- Add Image -->
        <ImageView
            android:id="@+id/add_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_image"
            android:background="@color/primary" />

        <!-- Upload and Delete Image Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="8dp">

            <ImageButton
                android:id="@+id/upload_image_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="Upload Image"
                android:src="@drawable/ic_upload_image"
                app:tint="@color/primary" />

            <ImageButton
                android:id="@+id/delete_image_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="Delete Image"
                android:src="@drawable/ic_delete"
                app:tint="@color/primary" />
        </LinearLayout>

        <!-- Event Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="*Event Title:"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter event title"
            android:inputType="text" />

        <!-- Event Description -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="*Event Description:"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter event description"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:padding="8dp"
            android:lineSpacingExtra="4dp"/>

        <!-- Start Date and End Date Fields Side by Side -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <!-- Start Date -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/start_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="*Start Date:"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/start_date_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="YYYY/MM/DD"
                    android:inputType="date" />
            </LinearLayout>

            <!-- End Date -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginStart="8dp">

                <TextView
                    android:id="@+id/end_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="*End Date:"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/end_date_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="YYYY/MM/DD"
                    android:inputType="date" />
            </LinearLayout>
        </LinearLayout>

        <!-- Registration Opens and Registration Deadline Fields Side by Side -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <!-- Registration Opens -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="*Registration Opens:" />

                <EditText
                    android:id="@+id/registration_opens_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="YYYY/MM/DD"
                    android:inputType="date" />
            </LinearLayout>

            <!-- Registration Deadline -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginStart="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="*Registration Deadline:" />

                <EditText
                    android:id="@+id/registration_deadline_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="YYYY/MM/DD"
                    android:inputType="date" />
            </LinearLayout>
        </LinearLayout>

        <!-- Waitlist Limit -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <CheckBox
                android:id="@+id/waitlist_limit_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Enable Waitlist Limit" />

            <EditText
                android:id="@+id/waitlist_limit_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="XX"
                android:inputType="number"
                android:gravity="center"
                android:visibility="gone"/>
        </LinearLayout>

        <!-- Event Limit -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Event Limit:" />

        <EditText
            android:id="@+id/capacityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="XXX"
            android:inputType="number" />

        <!-- Lottery Day -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="*Lottery Day:" />

        <EditText
            android:id="@+id/lottery_day_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="YYYY/MM/DD"
            android:inputType="date" />

        <!-- Event Price -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="*Event Price:" />

        <EditText
            android:id="@+id/event_price_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="$XX"
            android:inputType="numberDecimal" />

        <!-- Geolocation -->
        <CheckBox
            android:id="@+id/geolocation_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enable Geolocation" />

        <!-- Publish Button -->
        <Button
            android:id="@+id/createEventButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Publish"
            android:backgroundTint="@color/primary"
            android:textColor="#FFFFFF" />

    </LinearLayout>
</ScrollView>
